modify string formatting